different folder structure for standard plone-test

--- a/base.cfg
+++ b/base.cfg
@@ -34,7 +34,7 @@ eggs =
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis
-directory = ${buildout:directory}/src/bise
+directory = ${buildout:directory}/bise
 return-status-codes = False
 
 
