--- a/tox.ini
+++ b/tox.ini
@@ -68,7 +68,7 @@ deps =
     mccabe
 
 commands =
-    isort --check-only --recursive {toxinidir}/src
+    isort --check-only --recursive {toxinidir}
 
 whitelist_externals =
     mkdir
@@ -80,7 +80,7 @@ deps =
     isort
 
 commands =
-    isort --apply --recursive {toxinidir}/src
+    isort --apply --recursive {toxinidir}
 
 [testenv:py27-lint]
 basepython = python2.7
