--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ lib/
 local/
 node_modules/
 parts/
-src/*
 dist/*
 test.plone_addon/
 var/
@@ -37,5 +36,5 @@ reports/
 !.gitignore
 !.gitkeep
 !.travis.yml
-!src/bise
+!bise
 *~
